Fixing CSS for line wrapping

--- a/static/assets/css/sandbox.css
+++ b/static/assets/css/sandbox.css
@@ -1,3 +1,7 @@
+th {
+  white-space: nowrap;
+}
+
 .whitelink {
   color: #aaa;
   cursor: pointer;
